# URC-Prototyping

JON Side Code Example/: rover.py
Rover <> Basestation Example/: basestation.py
SparkMax Encoder/: CMakeLists.txt  ReadMe.md  ReadMe.txt  get_encoder_values.py  spark_bridge.cpp
v16/: README.md  app.py  app_backup_of_16_v1.py  app_backup_of_16_v2.py  environment.yml  launch_site.bat  reinstall.bat  servo.py  setup_env.bat
v16/LED_control/: LED_control.ino
v16/Robotic_Arm_Manual/: Robotic_Arm_Manual.ino
v16/Servo_control/: Servo_control.ino
v16/robo_arm_servo_test/: robo_arm_servo_test.ino
v16/robo_arm_servo_test_1/: robo_arm_servo_test_1.ino
v16/templates/: base.html  delivery.html  equipment.html  manual.html  navigation.html  science.html  video.html
